--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -24,6 +24,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "datatables": "^1.10.18"
+        "datatables": "^1.10.18",
+        "jquery-tabledit": "^1.0.0",
+        "vue-axios": "^2.1.4",
+        "vue-multiselect": "^2.1.6",
+        "vue-route": "^1.5.1",
+        "vuedraggable": "^2.23.0"
     }
 }
