--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "dependencies": {
         "datatables": "^1.10.18",
         "jquery-tabledit": "^1.0.0",
+        "jspdf": "^1.5.3",
+        "jspdf-autotable": "^3.2.4",
         "vue-axios": "^2.1.4",
         "vue-multiselect": "^2.1.6",
         "vue-route": "^1.5.1",
+        "vue-router": "^3.1.3",
         "vuedraggable": "^2.23.0"
     }
 }
