--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
         "jquery-tabledit": "^1.0.0",
         "jspdf": "^1.5.3",
         "jspdf-autotable": "^3.2.4",
-        "vue-axios": "^2.1.4",
+        "vue-axios": "^2.1.5",
         "vue-multiselect": "^2.1.6",
         "vue-route": "^1.5.1",
         "vue-router": "^3.1.3",
-        "vuedraggable": "^2.23.0"
+        "vuedraggable": "^2.23.0",
+        "vuetify": "^2.1.3"
     }
 }
